# The-Commit-Commissar

./: .gitignore  README.md  The Commit Commissar.sln  index.html  setup_wolf_engine.bat  shell.nix
Dashboard/: app.js  style.css
The Commit Commissar/: CMakeLists.txt  Commissar.cpp  Commissar.h  Helper.h  Project.cpp  Project.h  Scenario.cpp  Scenario.h  The Commit Commisar.vcxproj.filters  The Commit Commissar.vcxproj  TrayManager.cpp  main.cpp  shell.nix
The Commit Commissar/dependencies/: Wolf Engine 2.0
The Commit Commissar/dependencies/traypp/: CMakeLists.txt
The Commit Commissar/dependencies/traypp/tray/include/core/windows/: tray.hpp
The Commit Commissar/dependencies/traypp/tray/src/core/linux/: tray.cpp
The Commit Commissar/x64/Debug/: The Commit Commissar.exe.recipe  vc143.idb
The-Commit-Commissar/: CMakeLists.txt  Commissar.cpp  Commissar.h  Helper.h  Project.cpp  Project.h  Scenario.cpp  Scenario.h  TrayManager.h  screenshotTemplate.py  shell.nix  status.json
The-Commit-Commissar/.lib_links/: libbz2.so.1.0
The-Commit-Commissar/dependencies/traypp/tray/include/core/linux/: tray.hpp
The-Commit-Commissar/dependencies/traypp/tray/src/core/windows/: image.cpp  tray.cpp
dashboard/: app.js  index.html
x64/Debug/: Common.idb  Common.lib  Engine Core.idb  Graphic API Broker.idb
x64/Debug/exe/: nixRun.sh  run.bat
